--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,13 @@
 
 .container {
   padding-top: 20px;
+  padding-left: 200px;
+}
+
+@media only screen and (max-width: 992px) {
+  .container {
+    padding-left: 0;
+  }
 }
 
 .modal-footer a.disabled {
